# send-file

./: .gitignore  Cargo.toml  test.sh
src/: channel.rs  command.rs  context.rs  main.rs
test-data/: file_ticket.txt
