[package]
name = "send-file"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
iroh = {version="0.95.1", features = ["discovery-local-network", "discovery-pkarr-dht"]}
iroh-blobs = "0.97.0"
rand = "0.9.2"
tokio = "1.48.0"
tracing-subscriber = "0.3.22"
