[package]
name = "send-file"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
data-encoding = "2.9.0"
futures-lite = "2.6.1"
iroh = { version = "0.95.1", features = [
    "discovery-local-network",
    "discovery-pkarr-dht",
] }
iroh-blobs = "0.97.0"
iroh-gossip = "0.95.0"
postcard = { version = "1.1.3", features = ["use-std"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.48.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
